# opencv-wasm-web

./: README.md  buildCPP.sh  genSSLC.sh  index.html  localhost+3-key.pem  localhost+3.pem  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.next/: trace
public/: opencv_wasm.js  opencv_wasm.wasm
src/: index.css  main.tsx
src/components/: UploadTemplateImg.tsx  VideoCanvas.tsx
src/cpp/: CMakeLists.txt  ar_detector.cpp  ar_detector11.cpp  http_client.cpp  main.cpp
src/cpp/assets/: opencv_wasm.js  opencv_wasm.wasm
src/hooks/: useFetchStreamCamrea.ts  useWasmProcessor.ts
src/pages/: edge.html  home.tsx  orb.tsx
src/pages/UploadMatchInfo/: FeatureDetector.tsx  UploadVideo.tsx  index.tsx
src/types/: global.d.ts  orbFeaturePoint.d.ts
src/utils/: index.ts  loader.ts  opencvLoaded.ts  processor.ts  wasmFeatureDetect.js
